@@ -229,6 +229,12 @@ iflinux_is_bond(struct lldpd *cfg,
     struct interfaces_device_list *interfaces,
     struct interfaces_device *master)
 {
+	/* Shortcut if we detect the new team driver. Upper and lower links
+	 * should already be set with netlink in this case.  */
+	if (master->driver && !strcmp(master->driver, "team")) {
+		return 1;
+	}
+
 	struct ifreq ifr = {};
 	struct ifbond ifb = {};
 	strlcpy(ifr.ifr_name, master->name, sizeof(ifr.ifr_name));
